--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cross-env": "^5.2.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.4.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vue-lazyload": "^1.2.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
