--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/style-resources": "^0.1.2",
     "cross-env": "^5.2.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.4.0",
