--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^5.2.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.4.0",
+    "postcss": "^7.0.16",
     "sass-loader": "^7.1.0",
     "vue-lazyload": "^1.2.6"
   },
