--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.12.0",
     "nuxt": "^2.4.0",
     "nuxt-trailingslash-module": "^1.1.0",
+    "nuxt-webfontloader": "^1.1.0",
     "postcss": "^7.0.16",
     "prismjs": "^1.16.0",
     "sass-loader": "^7.1.0",
