--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/style-resources": "^0.1.2",
     "cross-env": "^5.2.0",
+    "js-yaml-loader": "^1.2.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.4.0",
     "nuxt-webfontloader": "^1.1.0",
